--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html>  
-<head>  
-<script type = "text/javascript">  
-let color = "green";
-         console.log = (green);
-</script>  
-</head>  
-<body>  
-<p>Click the following button to see the function in action</p>  
-<input type = "button" onclick = "myfunction()" value = "Display">  
-</body>  
-</html>  
+<h1>hello </h1>
