--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> hello test</h1>
 
-<script type = "text/javascript">
+<script src="script.js" type="text/javascript">
   let variable = "green";
   console.log(variable);
 
