--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-
+<html>
+ 
 <script src="script.js" type="text/javascript">
   let variable = "green";
   console.log(variable);
 
+<\script>
+  <\html>
