--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<html>
- 
-<script src="script.js" type="text/javascript">
-  let variable = "green";
-  console.log(variable);
-
-<\script>
-  <\html>
+<head>
+</head>
+<body>
+  <script src="script.js"></script>
+</body>
