--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<head>
+<html>
+  <head>
+ <script type = "text"/javascript" src="script.js"></script> 
 </head>
 <body>
-  <script src="script.js"></script>
+                                                  <p> hi click this </p>
+                                                  
+                                                  <input type = "button" onclick = "myfunction()" value = "Display">
 </body>
+
+                                                  </html>
+                                                  
