--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
- 
-<script src="script.js" type="text/javascript">
-  let variable = "green";
-  console.log(variable);
 
-<\script>
-  <\html>
+<html>
+  <head>
+ <script type = "text"/javascript" src="script.js"></script> 
+</head>
+<body>
+                                                  <p> hi click this </p>
+                                                  
+                                                  <input type = "button" onclick = "myfunction()" value = "Display">
+</body>
+
+                                                  </html>
