--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+  <head>
+ <script type = "text"/javascript" src="script.js"></script> 
+</head>
+<body>
+                                                  <script>
+                                                  let var ="name";
+console.log(var);
+</script>
+                                                  
+                                                  <p> hi click this test 2 </p>
+                                                  
+                                                  <input type = "button" onclick = "myfunction()" value = "Display">
+</body>
 
+                                                  </html>
